<resources>
    <string name="app_name">Transporargo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_up_input_email">Your email needs to sign in "Transporargo" and receive notifications about new features</string>
    <string name="sign_up_input_password">In your password don\'t use personal information, real words, the same password on more than one account</string>
    <string name="registration_was_successful">Registration was successful</string>
    <string name="next">Next</string>
    <string name="submit_registration">Submit registration</string>
    <string name="lets_start_use_app">Let\'s start use app!</string>
    <string name="repeat_password">Repeat password</string>
    <string name="enter_password">Enter password</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="email_must_include_sign">Email must include @ sign</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="password_field_is_empty">Password field is empty</string>
    <string name="repeat_password_field_is_empty">Repeat password field is empty</string>
    <string name="repeated_password_not_equal_to_password">Repeated password not equal to password</string>
    <string name="name">Name</string>
    <string name="name_field_is_empty">Name field is empty</string>
    <string name="surname">Surname</string>
    <string name="surname_field_is_empty">Surname field is empty</string>
    <string name="enter_your_name_n_surname">Enter your name and surname</string>
    <string name="available_transport">Available transport</string>
    <string name="available_loads">Available loads</string>
    <string name="add_request">Add request</string>
    <string name="transportation_prices">Transportation prices</string>
    <string name="my_requests">My requests</string>
    <string name="request_places">Request places</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="request_path_template">%s - %s</string>
    <string name="evaluates_dates_template">%s - %s</string>
    <string name="empty_request_list_explain">Your requests list is empty. Add request to see it here</string>
    <string name="weight_template">%s kg</string>
    <string name="cube_template">%s m³</string>
    <string name="place_from">Place from</string>
    <string name="place_to">Place to</string>
    <string name="phone_call_permission_denied_explanation">You can\'t call when permission isn\'t granted</string>
    <string name="location_call_permission_denied_explanation">You can\'t choose place from/to when permission isn\'t granted</string>
    <string name="settings">Settings</string>
    <string name="truck">Truck</string>
    <string name="cargo">Cargo</string>
    <string name="evaluate_date">Evaluate date</string>
    <string name="weight">Weight</string>
    <string name="capacity">Capacity</string>
    <string name="truck_type">Truck type</string>
    <string name="cargo_type">Cargo type</string>
    <string name="phone">Phone</string>
    <string name="cargo_input_is_empty">Cargo input is empty</string>
    <string name="truck_input_is_empty">Truck input is empty</string>
    <string name="evaluate_date_input_is_empty">Evaluate date input is empty</string>
    <string name="evaluate_date_must_be_in_day_month_year_pattern">Evaluate date must be in day.month.full_year pattern or date is not valid</string>
    <string name="cant_add_request_for_evaluate_date_from_the_past">Can\'t add request for evaluate date from the past</string>
    <string name="capacity_input_is_empty">Capacity input is empty</string>
    <string name="capacity_is_not_numeric">Capacity is not numeric</string>
    <string name="weight_input_is_empty">Weight input is empty</string>
    <string name="weight_is_not_numeric">Weight is not numeric</string>
    <string name="save_from_place">Save from place</string>
    <string name="save_to_place">Save to place</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="select_point_of_interest">Select point of interest</string>
    <string name="point_of_interest_not_selected">Point of interest not selected</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="request_form">Request form</string>
    <string name="place_from_is_empty">Place from is empty</string>
    <string name="place_to_is_empty">Place to is empty</string>
    <string name="save_request">Save request</string>
    <string name="search_requests">Search requests!</string>
    <string name="search_form_is_empty">Search form is empty</string>
    <string name="requests_list">Requests list</string>
    <string name="user_with_this_email_already_exist">User with this email already exist</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="smth_went_wrong_try_later">Something went wrong! Try later</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>